Fixed spacing in About Page

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   .prof-def,
   .sign-up {
     display: flex;
-    height: 90vh;
+    height: 75vh;
     align-items: center;
     justify-content: center;
     font-size: 3rem;
